# gateway-x-preranked-claims-cross-pollinated

./: .env.example  .gitignore  DYNAMIC_MODELS.md  Dockerfile  LICENSE  README.md  budget_test.html  bulletproof_test.html  comprehensive_test.html  css_test.html  debug_chart.html  debug_frontend.html  debug_frontend.js  debug_frontend_full.html  debug_round_details.html  debug_simple_rounds.html  docker-compose.yml  env.example  final_chart_test.html  final_comprehensive_test.html  final_verification_test.html  final_working_test.html  gatewayx_single.py  multi_round_test.html  pyproject.toml  requirements.txt  setup.py  setup_security.py  simple_test.html  test_all_apis.py  test_anthropic.py  test_dynamic_models.py  test_frontend.html  test_frontend_chart.html  test_frontend_direct.html  test_integration.py  test_security.py  working_frontend.html
.github/workflows/: tests.yml
config/templates/: .env.template
docs/: API.md
gateway-x/app/: __init__.py  ai_engines.py  btl_ranker.py  claims_extractor.py  config.py  cross_pollination.py  duel_scheduler.py  ledger.py  monitors.py  orchestrator.py  playbook_selector.py  prompts.py  report.py  schemas.py  server.py
gateway-x/static/: index.html
gateway-x/tests/: __init__.py  test_btl.py  test_orchestrator.py  test_prompts.py  test_selector.py
src/frontend/: app.js  index.html  style.css
src/gatewayx/: __init__.py  btl_ranker.py  dawid_skene.py  duel_scheduler.py  engine_pool.py  llm_engines.py  model_registry.py  monitors.py  orchestrator.py  playbook_selector.py  promptvault.py  secure_config.py  server.py  settings.py  transparency.py
src/gatewayx/engines/: __init__.py  grok_engine.py
tests/: __init__.py  test_btl.py  test_engines.py  test_orchestrator.py
